# controllers/authController.js
@@ -1,89 +1,126 @@
-
 const User = require("../model/userModel");
 const jwt = require("jsonwebtoken");
-const bcrypt = require("bcryptjs")
+const bcrypt = require("bcryptjs");
 require("dotenv").config();
 
+const registerUser = async (req, res) => {
+  const { username, email, password, phoneNumber, region, location, role } =
+    req.body;
 
-const register = async(req, res)=>{
-
- const{ username, email, password, phoneNumber, region, role }= req.body;
-
-    try {
-
-        const existingUser = await User.findOne({email});
-        if (existingUser){
-            return res.status(400).json({
-                message: "User already exists"
-            })
-        }
-
-        const hashedPassword = await bcrypt.hash(password, 10)
-        const user = await User.create({
-            username,
-            email,
-            password: hashedPassword,
-            phoneNumber,
-            region,
-            role
-        })
-        await user.save();
-
-        res.status(201).json({
-            message: "User registered successfully"
-        })
-    } catch (error) {
-        console.error("Error in register function:", error); // this logs the error
-        return res.status(500).json({
-            message: "Something went wrong"
-        })
-    }
-}
-
-
-const login = async (req, res)=>{
-    const{ email, password} = req.body;
-
-    try {
-
-        const user = await User.findOne({email})
-    if(!user){
-        return res.status(400).json({
-            message: "Invalid credentials"
-        })
+  try {
+    const existingUser = await User.findOne({ email });
+    if (existingUser) {
+      return res.status(400).json({
+        message: "User already exists",
+      });
     }
 
-    const isMatch = await bcrypt.compare(password, user.password )
+    const hashedPassword = await bcrypt.hash(password, 10);
+    const user = await User.create({
+      username,
+      email,
+      password: hashedPassword,
+      phoneNumber,
+      region,
+      location,
+      role: "farmer",
+    });
+    await user.save();
 
-    if(!isMatch){
-        return res.status(401).json({
-            message: "Invalid credentials"
-        });
+    res.status(201).json({
+      message: "User registered successfully",
+    });
+  } catch (error) {
+    console.error("Error in register function:", error); // this logs the error
+    return res.status(500).json({
+      message: "Something went wrong",
+    });
+  }
+};
+
+const registerAdmin = async (req, res) => {
+  const {
+    username,
+    email,
+    password,
+    phoneNumber,
+    role,
+    region,
+    location,
+    companyName,
+    address,
+  } = req.body;
+
+  try {
+    const existingUser = await User.findOne({ email });
+    if (existingUser)
+      return res.status(400).json({ message: "Email already exists" });
+
+    const hashedPassword = await bcrypt.hash(password, 10);
+
+    const newUser = new User({
+      username,
+      email,
+      password: hashedPassword,
+      phoneNumber,
+      region,
+      role: "admin",
+      companyName,
+      location,
+      address,
+    });
+
+    await newUser.save();
+    res.status(201).json({ message: "Admin registered successfully" });
+  } catch (err) {
+    console.log(err.message);
+    res.status(500).json({
+      message: "Server error",
+      success: false,
+      error: error.message,
+    });
+  }
+};
+
+const login = async (req, res) => {
+  const { username, email, password } = req.body;
+
+  try {
+    const user = await User.findOne({ email });
+    if (!user) {
+      return res.status(400).json({
+        message: "Invalid credentials",
+      });
+    }
+
+    const isMatch = await bcrypt.compare(password, user.password);
+
+    if (!isMatch) {
+      return res.status(401).json({
+        message: "Invalid credentials",
+      });
     }
     const token = jwt.sign(
-        {id: user._id, username: user.username, role: user.role},
-        process.env.JWT_SECRET
+      { id: user._id, username: user.username, role: user.role },
+      process.env.JWT_SECRET
     );
 
- res.status(201).json({
-    token: token,
-    user:{
-        username : user.username,
-        email: user.email
-    }
- })
- 
-    } catch (error) {
-        return res.status(500).json({
-     message: error.message,
- 
-        })
-    }
-   
-}
+    res.status(201).json({
+      token: token,
+      user: {
+        username: user.username,
+        email: user.email,
+      },
+    });
+  } catch (error) {
+    return res.status(500).json({
+      message: error.message,
+    });
+  }
+};
 
-
-module.exports ={
-    register,
-    login
-}
+module.exports = {
+  registerUser,
+  registerAdmin,
+  login,
+};
